--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
 		"del": "^4.0.0",
 		"gulp": "^4.0.0",
 		"gulp-babel": "^8.0.0-beta.2",
+		"gulp-cache": "^1.1.3",
 		"gulp-changed": "^3.2.0",
 		"gulp-cli": "^2.0.1",
 		"gulp-concat": "^2.6.1",
+		"gulp-envify": "^1.0.0",
 		"gulp-imagemin": "^6.2.0",
 		"gulp-postcss": "^8.0.0",
 		"gulp-prettier": "^2.1.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-uglify": "^3.0.2",
 		"gulp-watch": "^5.0.1",
+		"include-media": "^1.4.9",
 		"jquery": "^3.3.1"
 	},
 	"dependencies": {
@@ -34,10 +37,13 @@
 		"gulp-nunjucks": "^5.0.1",
 		"gulp-sourcemaps": "^2.6.5",
 		"gulp-webp": "^4.0.1",
+		"hamburgers": "^1.1.3",
 		"husky": "^4.0.6",
 		"imagemin-mozjpeg": "^8.0.0",
 		"lint-staged": "^9.5.0",
-		"prettier": "^1.19.1"
+		"mq-scss": "^2.1.5",
+		"prettier": "^1.19.1",
+		"smoothscroll-polyfill": "^0.4.4"
 	},
 	"husky": {
 		"hooks": {
